css/style.css
/*
Template Name: Resumex
Description: HTML5 / CSS3 One Page
Version: 1.0
Author: themehippo.com
*/

/*------------------------------------------------------------------
# [Color codes]

# Body  (text): #3a4750
# Heading Color #444444
# Theme Color (link color) #82b541
# Mid grey (sub header) #f4f4f4
# -------------------------------------------------------------------*/

body {
    font-family: 'Hind', sans-serif;
    font-size: 15px;
    line-height: 1.8em;
    color: #3d3d50;
    font-weight: 300;
    background: url("../img/pattern-bg.png") fixed;
}

/* --------------------------------------
 * Global Typography
 *------------------------------------------*/

h1,
h2,
h3,
h4,
h5,
h6 {
    margin: 0 0 15px;
    color: #2b2b3d;
}

h1 {
    font-size: 26px;
    line-height: 1.8em;
    font-weight: 700;
}

h2 {
    font-size: 18px;
    line-height: 1.8em;
    font-weight: 700;
}

h3 {
    font-size: 16px;
    line-height: 1.8em;
    font-weight: 500;
}

h4 {
    font-size: 15px;
    line-height: 1.8em;
    font-weight: 500;
}

h5 {
    font-size: 15px;
    line-height: 1.5em;
    font-weight: 500;
}

h6 {
    font-size: 15px;
    line-height: 1.5em;
}

/* --------------------------------------
 * LINK STYLE
 *------------------------------------------*/
a {
    color: #37a000;
    text-decoration: none;
    -webkit-transition: all 0.3s ease 0s;
    -moz-transition: all 0.3s ease 0s;
    -o-transition: all 0.3s ease 0s;
    transition: all 0.3s ease 0s;
}

a,
a:active,
a:focus,
a:active {
    text-decoration: none;
    outline: none
}

a:hover,
a:focus {
    text-decoration: none;
    color: #ff9800;
}

p {
    margin-bottom: 20px;
}

ul {
    margin: 0;
    padding: 0;
    list-style: none;
}

/*------------------
 * Button Style
 *------------------*/
.btn {
    padding: 14px 30px 11px;
    margin-bottom: 0;
    font-size: 14px;
    font-weight: 500;
    border-radius: 0;
    border: 0;
    text-transform: uppercase;
}

.btn-lg {
    font-weight: 700;
    font-size: 24px;
    padding: 15px 30px;
}

/*btn-primary*/
.btn-primary {
    background-color: #37a000;
}

.btn-primary:hover,
.btn-primary:focus,
.btn-primary:active:focus {
    background: #ff9800;
}

/*btn-default*/
.btn-default {
    color: #2a54f5;
    background-color: transparent;
    border: 2px solid #2a54f5;
}

.btn-default:hover,
.btn-default:focus,
.btn-default:active:focus {
    background: #2a54f5;
    color: #ffffff;
    border-color: #2a54f5;
}

button:focus,
.btn:focus,
.btn:active:focus {
    outline: none;
}

/* --------------------
 * Column Block
 * -------------------*/

.columns-block {
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: row;
    flex-direction: row;
    margin: 60px auto;
    padding: 0;
    box-shadow: 0 0 0 1px #eaeaea;
}

.blocks {
    box-sizing: border-box;
}

.left-col-block {
    overflow: hidden;
    -webkit-flex: 1 0 0;
    flex: 1 0 0;
    position: relative;
    background: rgba(255, 255, 255, .8);
    border-right: 1px solid #eaeaea;
}

.right-col-block {
    -webkit-flex: 2 0 0;
    flex: 2 0 0;
    position: relative;
    background: #ffffff;
}

@media (max-width : 768px) {

    .columns-block {
        display: block;
        margin: 0;
        box-shadow: none;
    }

    .left-col-block {
        width: 100%;
        position: relative;
        border: 0;
    }

    .right-col-block {
        width: 100%;
        position: relative;
        box-shadow: none;
    }
}

@media (min-width : 769px) and (max-width : 1024px) {
    .columns-block {
        margin-top: 30px;
        margin-bottom: 30px;
    }
}

/* --------------------
 * Section Background
 * -------------------*/

.gray-bg {
    background-color: #ffffff;
}

/* --------------------
 *  main Wrapper
 * -------------------*/
#main-wrapper {
    overflow: hidden;
}

/*-------------------
 * Section Wrapper
 *-------------------*/
.section-wrapper {
    padding: 50px;
    border-bottom: 1px solid #eaeaea;
}

@media (max-width : 480px) {
    .section-wrapper {
        padding: 20px 5px;
    }
}

/*---------------------------
* Section Title
*---------------------------*/
.section-title {
    margin-bottom: 15px;
}

.section-title h2 {
    margin-bottom: 5px;
    color: #37384c;
    font-size: 30px;
}

/*-----------------------------
 * NAVIGATION & HEADER STYLE
 *-----------------------------*/

.header {
    padding: 20px !important;
    margin: 0;
    position: relative;
    text-align: center;
}

.header .profile-img {
    margin-bottom: 20px;
}

.header .content-wrapper {}

.header .content {
    width: 100%;
    margin: 0 auto;
}

.header .content h1 {
    line-height: 1;
    margin: 0 0 5px;
}

.header .content .lead {
    font-size: 20px;
    font-weight: normal;
    color: #37a000;
    border-bottom: 1px solid #ece8ef;
    letter-spacing: 1px;
    display: block;
    padding-bottom: 10px;
}

a.hire-cta {
    text-align: center;
    border-radius: 3px;
    background: #37A000;
    border: 1px solid #37A000;
    padding: 6px 18px 3px;
    color: #fff;
    display: block;
    font-weight: 400;
    margin-bottom: 15px;
}

a.hire-cta.upwork {
    background: #37A000;
    border: 1px solid #37A000;
}

a.hire-cta.upwork:hover {
    background: #328d01;
    border: 1px solid #328d01;
}

a.hire-cta.linkedin {
    background: #0077B5;
    border-color: #0077B5;
}

a.hire-cta.linkedin:hover {
    background: #005f9e;
    border-color: #005f9e;
}

.interest-item span {
    display: inline-block;
    padding: 4px 12px 0px;
    border: 1px solid #eee;
    border-radius: 5px;
    margin-right: 10px;
    margin-bottom: 10px;
}

.header .content .about-text {
    margin: 10px 0;
    line-height: 1.6;
}

.img-avatar {
    display: block;
    margin: 25px auto 0;
    max-width: 170px;
    border-radius: 50%;
    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
}

.download-cv {
    font-weight: bold;
    font-size: 12px;
    color: #000;
    /* text-align: center; */
    display: block;
}

.header .btn {
    margin-top: 40px;
}

@media (max-width : 768px) {
    .header {
        padding: 0;
        text-align: center;
        border-bottom: 1px solid #ededed;
    }

    .header img {
        margin: 40px auto 5px;
    }

    .header .content {
        padding: 0;
    }
}

/* Header Sticky */

.sticky {
    position: -webkit-sticky;
    position: sticky;
    top: 0;
}

/*-------------------
 * Social Icon
 *-------------------*/

.social-icon {
    margin: 20px 0;
    padding: 0;
    display: block;
}

.social-icon li {
    display: inline-block;
    margin: 0 2px;
}

.social-icon li a {
    display: block;
    font-size: 25px;
    color: #333333;
    width: 50px;
    height: 50px;
    line-height: 50px;
    text-align: center;
    border-radius: 2px;
    border: 2px solid #eeeeee;
}

.social-icon li a:hover {
    border-color: #cccccc;
}

/*-------------------
 * Expertise
 *-------------------*/
.expertise-item {
    margin-bottom: 20px;
}

.expertise-item h3 {
    margin-bottom: 5px;
    font-weight: 700;
    line-height: 1;
    color: #404040;
    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
}

/*-------------------
 * Skills Progressbar
 *-------------------*/

.progress-stack {
    position: relative;
    margin: 3rem 0 2rem;
    max-width: 100%;
}

.progress-item {
    position: relative;
}

.progress-item .progress-title {
    font-size: 15px;
    font-weight: 400;
    display: inline-block;
    margin-bottom: 5px;
}

.progress-item .progress {
    height: 4px;
    box-shadow: none;
    border-radius: 5px;
}

.progress-item .progress-bar {
    background-color: #37a000;
    box-shadow: none;
    text-align: right;
}

.progress-item .progress-percent {
    font-size: 10px;
    background-color: #313131;
    position: absolute;
    top: 5px;
    padding: 0 8px;
    border-radius: 3px;
}

.progress-item .progress-percent::before {
    content: "";
    position: absolute;
    left: 0;
    bottom: -4px;
    border-top: 6px solid #313131;
    border-right: 8px solid transparent;
}

/*-------------------
 * Portfolio
 *-------------------*/

.portfolio-item {
    position: relative;
    display: block;
    margin-bottom: 30px;
    border: 1px solid #eaeaea;
}

.portfolio-item:hover {
    background-color: #00832a18;
}

.portfolio-item .portfolio-thumb img {
    height: auto;
    display: block;
    max-width: 100%;
}

.portfolio-item .portfolio-info {
    position: relative;
    bottom: 0;
    padding: 15px 15px 10px;
    width: 100%;

}

.portfolio-item .portfolio-info h3 {
    margin: 0;
    line-height: 1;
    color: rgb(67, 67, 67);
}

.portfolio-item .portfolio-info p {
    margin: 0;
}

.portfolio-item .portfolio-info small {
    color: rgb(67, 67, 67);
}

/*-------------------
 * Content Item
 *-------------------*/

.exp-list {
    display: flex;
    flex-wrap: wrap;
}

.content-item {
    margin-bottom: 40px;
    flex: 1 0 50%;
}

.content-item h4 {
    margin: 0 0 10px;
    line-height: 1;
    font-weight: bold;
    color: #404040;
    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
    text-transform: uppercase;
}

.content-item h3 {
    margin: 0;
    line-height: 1.3;
    font-size: 18px;
}

.content-item h5 {
    color: #b5b5b5;
}

.content-item small {
    color: #888888;
    font-size: 16px;
}

.content-item img {
    max-width: 100%;
    max-height: 30px;
    width: auto;
    height: 100%;
    margin-bottom: 10px;
}

.content-item p {
    margin-bottom: 0;
}

/*-------------------
 * Contact
 *-------------------*/

.feedback-form {
    margin-top: 50px;
}

/*-------------------
 * Form Style
 *-------------------*/
.form-control {
    height: 50px;
    padding: 0 20px;
    font-size: 13px;
    line-height: 50px;
    color: #969595;
    border: 1px solid #cccccc;
    border-radius: 0;
    box-shadow: none;
    box-sizing: border-box;
}

.form-control:focus,
.form-control:active {
    box-shadow: none;
}

/* --------------------------------------------
 *   Footer
 *---------------------------------------------- */

/* Copyright */

.footer {
    padding: 30px 50px;
}

.footer .copyright-section {
    font-size: 13px;
    color: #888888;

}

.footer .copyright-section .copytext {
    font-weight: 400;
    display: block;
}

@media (max-width : 480px) {
    .footer {
        padding: 10px 20px;
    }
}

/* ---------------------------------------------- /*
 * Preloader
/* ---------------------------------------------- */
#preloader {
    background: rgba(255, 255, 255, .8);
    bottom: 0;
    left: 0;
    position: fixed;
    right: 0;
    top: 0;
    z-index: 9999;
}

#status,
.status-mes {
    background-image: url(../img/preloader.svg);
    background-position: center;
    background-repeat: no-repeat;
    height: 200px;
    left: 50%;
    margin: -100px 0 0 -100px;
    position: absolute;
    top: 50%;
    width: 200px;
}

.status-mes {
    background: none;
    left: 0;
    margin: 0;
    text-align: center;
    top: 65%;
}

.d-none {
    display: none !important;
}

